tests/snapshots/document_fragment__it_can_parse_single_div_as_fragment.snap
---
source: tests/document_fragment.rs
expression: ast
---
{
  "treeType": "documentFragment",
  "nodes": [
    {
      "element": {
        "name": "div",
        "variant": "void",
        "attributes": {},
        "nodes": []
      }
    }
  ]
}
