tests/snapshots/document_fragment__it_can_parse_single_text_as_fragment.snap
---
source: tests/document_fragment.rs
expression: ast
---
{
  "treeType": "documentFragment",
  "nodes": [
    {
      "text": "hello"
    }
  ]
}
