tests/snapshots/document_fragment__it_can_parse_text_comment_element_as_fragment.snap
---
source: tests/document_fragment.rs
expression: dom
---
{
  "treeType": "documentFragment",
  "nodes": [
    "hello",
    {
      "name": "div",
      "variant": "void"
    }
  ]
}
